fixed spacing on mid and max media queries for index

--- a/hackathon/css/_max-media.scss
+++ b/hackathon/css/_max-media.scss
@@ -21,9 +21,12 @@
 */
 
 .row {
+	width: 90%;
+	padding-left: 120px;
   .col6 {
-     @include grid(5);}
+	 @include grid(5);}
+	 .col6:nth-of-type(2n) {
+	 	float: left;}		
 }
-
 
 }
