--- a/hackathon/css/_mid-media.scss
+++ b/hackathon/css/_mid-media.scss
@@ -14,10 +14,14 @@
 */
 
 .row {
+	width: 90%;
   .col6 {
-     @include grid(8);}
+	 @include grid(8);}
+	 .col6:nth-of-type(2n) {
+	 	float: right;
+	 }
+		
 }
-
 
 /*
   ========================================
@@ -26,7 +30,7 @@
 */
 
 section {
- 	h1 {
+	h1 {
 		margin-top: 0;}
 	img {
 		display: block;
